@@ -1,3 +1,9 @@
+2004-10-02  Jari Petter Sundell  <jaris@student.matnat.uio.no>
+
+	* torrent: New class for selecting the chunks to download.
+
+	* client: File priority added.
+
 2004-09-25  Jari Petter Sundell  <jaris@student.matnat.uio.no>
 
 	* client: View files in torrent and their size. Will be used for priority later.
